logs/Slang/generated/keywords/5.6.2--keyword_string.sv.log
name: string
description: The 'string' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_string.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_string.sv:8:8: error: expected declarator
    bit string;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_string.sv:8:15: error: expected declarator
    bit string;
              ^
